--- a/src/PcapParser/PcapParser/PcapParser.vcxproj
+++ b/src/PcapParser/PcapParser/PcapParser.vcxproj
@@ -131,7 +131,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Connection.cpp" />
+    <ClCompile Include="ConnectionContent.cpp" />
+    <ClCompile Include="Graph.cpp" />
+    <ClCompile Include="Grouper.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Splitter.cpp" />
+    <ClCompile Include="Utilities.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Connection.h" />
+    <ClInclude Include="ConnectionContent.h" />
+    <ClInclude Include="Defines.h" />
+    <ClInclude Include="Graph.h" />
+    <ClInclude Include="Grouper.h" />
+    <ClInclude Include="Splitter.h" />
+    <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
