--- a/src/PcapParser/PcapParser/PcapParser.vcxproj
+++ b/src/PcapParser/PcapParser/PcapParser.vcxproj
@@ -82,7 +82,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\debug;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\debug-version;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>Packet.lib;wpcap.lib;Pcap++.lib;Common++.lib;Packet++.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -102,7 +102,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\release;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\release-version;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>Packet.lib;wpcap.lib;Pcap++.lib;Common++.lib;Packet++.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -118,7 +118,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\debug;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\debug-version;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>Packet.lib;wpcap.lib;Pcap++.lib;Common++.lib;Packet++.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -138,7 +138,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\release;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\pcapplusplus\lib\release-version;%(AdditionalLibraryDirectories);$(SolutionDir)Thirdparty\npcap\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>Packet.lib;wpcap.lib;Pcap++.lib;Common++.lib;Packet++.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
